# pcp-check

./: README.md  action.yml  pyproject.toml
.github/workflows/: publish.yml
pcp_check/: __init__.py  main.py
